<resources>
    <string name="app_name">Events</string>
    <string name="caption_login">Logar</string>
    <string name="hint_login">Login</string>
    <string name="hint_password">Senha</string>
    <string name="logaded">Logou com sucesso</string>
    <string name="error_login_or_password">Usuário ou senha inválido(s)</string>
    <string name="register">Cadastre-se</string>
    <string name="register_place">Cadastre um local</string>
    <string name="hint_password_again">Confirme a senha</string>
    <string name="not_filled">O campo \"%s\" não foi preenchido</string>
    <string name="password_doesnt_match">As senhas não conferem</string>
    <string name="passwords_need_minimal_x_characters">A senha precisa conter no mínimo %d caracteres</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="description">Descrição</string>
    <string name="latitude_two_dots">Latitude:</string>
    <string name="longitude_two_dots">Longitude:</string>
    <string name="places">Locais</string>
    <string name="registered_place">Local cadastrado</string>
    <string name="name">Nome</string>
    <string name="date">Data</string>
    <string name="event">Evento</string>
    <string name="add">Adicionar</string>
    <string name="job_needs">Trabalhos necessários</string>
    <string name="event_register">Cadastro do Evento</string>
    <string name="added">adicionado</string>
    <string name="you_reached_max_limit">Você atingiu o limite máximo</string>
    <string name="place">Local</string>
    <string name="address">Endereço</string>
    <string name="save">Salvar</string>
    <string name="undo">Desfazer</string>
    <string name="removed">removido</string>
    <string name="select_a_job_need">Selecione ao menos um trabalho que será necessário</string>
    <string name="label_add_point_map">Clique em um ponto do mapa para adicionar o endereço.</string>
    <string name="results_not_found">Resultados não encontrados</string>
    <string name="select_location">Selecionar localização</string>
    <string name="change">Alterar</string>
    <string name="event_registered_successfully">Evento registrado com sucesso</string>
    <string name="events">Eventos</string>
    <string name="drag_map_instruction">Arraste o mapa para posicionar o ponto do endereço</string>
    <string name="skills">Habilidades</string>
    <string name="date_start">Data e horário de início</string>
    <string name="date_end">Data e horário de fim</string>
    <string name="date_max_min_limit">A data de início não pode ser maior que a data de finalização</string>
    <string name="date_equals">A data e horário de início não podem ser idênticas a data e horário de finalização</string>
    <string name="my_skills">Minhas Habilidades</string>
    <string name="my_events">Meus Eventos</string>
    <string name="add_a_place">Adicione um local</string>
    <string name="job">Trabalho</string>
</resources>
