<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_jobs"
            android:checked="false"
            android:icon="@drawable/ic_work_white_24dp"
            android:title="@string/job" />

        <item
            android:id="@+id/nav_events"
            android:checked="true"
            android:icon="@drawable/ic_event_available_white_24dp"
            android:title="@string/my_events" />
        <item
            android:id="@+id/nav_skills"
            android:checked="false"
            android:icon="@drawable/ic_assignment_ind_white_24dp"
            android:title="@string/my_skills" />
        <item
            android:id="@+id/nav_places"
            android:checked="false"
            android:icon="@drawable/ic_place_white_24dp"
            android:title="@string/places" />
    </group>

</menu>