<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="br.com.ufg.www.events.view.event.register.RegisterEventViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#f1f1f1"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView style="@style/CustomCardView">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextAppearance.AppCompat.Title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginBottom="@dimen/respiro_visual_menor"
                        android:text="@string/event"
                        android:textColor="@android:color/black" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editTextName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/name"
                            android:inputType="textCapWords"
                            android:padding="8dp"
                            android:text="@={viewModel.liveData.name}" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editTextDate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/date"
                            android:imeOptions="actionDone"
                            android:inputType="number"
                            android:padding="8dp"
                            android:text="@={viewModel.liveData.date}" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView style="@style/CustomCardView">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextAppearance.AppCompat.Title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginBottom="@dimen/respiro_visual_menor"
                        android:text="@string/place"
                        android:textColor="@android:color/black" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:showOrHide="@{viewModel.liveData.hasLocation}">

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/editTextLatitude"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:enabled="false"
                                android:hint="@string/latitude"
                                android:padding="8dp"
                                android:text="@={viewModel.liveData.latitude}" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/editTextLongitude"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:enabled="false"
                                android:hint="@string/longitude"
                                android:padding="8dp"
                                android:text="@={viewModel.liveData.longitude}" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/editTextAddress"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:enabled="false"
                                android:hint="@string/address"
                                android:padding="8dp"
                                android:text="@={viewModel.liveData.address}" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.button.MaterialButton
                            style="@style/CustomButton"
                            android:layout_gravity="right"
                            android:onClick="changeLocation"
                            android:text="@string/change" />

                    </LinearLayout>

                    <com.google.android.material.button.MaterialButton
                        style="@style/CustomButton"
                        android:layout_gravity="right"
                        android:onClick="changeLocation"
                        android:text="@string/add"
                        app:shouldGone="@{viewModel.liveData.hasLocation}" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <fragment
                android:name="br.com.ufg.www.events.view.skill.SkillFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:tag="skillFragment"
                tools:layout="@layout/fragment_skill" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/respiro_visual_menor"
                android:onClick="save"
                android:text="@string/save" />

        </LinearLayout>

    </ScrollView>

</layout>
